--- a/health-event-notification.yml
+++ b/health-event-notification.yml
@@ -52,6 +52,7 @@ Resources:
     Condition: CreateEventBusOriginRegion
     Type: 'AWS::Events::Rule'
     Properties:
+      Name: Health-Event-Rule-to-SNS
       Description: Health-Event-Rule
       EventBusName: !Ref rHealthEventBus
       EventPattern:
@@ -77,6 +78,7 @@ Resources:
           Protocol: "email"
       TopicName: Health-event-Notification
       DisplayName: Health-event-Notification
+      KmsMasterKeyId: alias/aws/sns
   SnsTopicPolicyEventRule:
     Condition: CreateEventBusOriginRegion
     Type: "AWS::SNS::TopicPolicy"
